# goquant-trading-system

./: .gitignore  CMakeLists.txt  Readme.md
config/: config_sample.json
src/: CMakeLists.txt  deribit_api.cpp  deribit_api.h  main.cpp
